--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,7 @@ a {
     position: fixed;
     left: 0;
     right: 0;
+    top: 0;
     z-index: 98;
     padding: 10px;
 }
@@ -139,6 +140,7 @@ a {
 /* BEGIN Menu */
 .nav-container {
     position: fixed;
+    top: 0;
     width: 100%;
     z-index: 99;
     display: none;
@@ -291,6 +293,56 @@ a {
 
 main {
     margin-bottom: 70px;
+}
+
+
+.tabs {
+    margin-top: 100px;
+    border-bottom: 1px solid var(--color-2);
+}
+
+.tabs__title {
+    font-size: 30px;
+    font-family: var(--font-family-2);
+}
+
+.tabs__list-wrapper {
+    overflow-x: auto;
+}
+
+.tabs__list {
+    width: 100%;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    text-transform: uppercase;
+}
+
+.tabs__list li {
+    display: inline-block;
+    height: 100%;
+    padding: 10px 0;
+    margin: 0 10px;
+}
+
+.tabs__list li:first-child {
+    margin-left: 0;
+}
+
+.tabs__list li:last-child {
+    margin-right: 0;
+}
+
+.tabs__list li.active {
+    border-bottom: 1px solid var(--color-1);
+}
+
+.tabs__list li.active a {
+    color: var(--color-1);
+}
+
+.tabs__list a {
+    color: var(--color-2);
 }
 
 
