--- a/css/main.css
+++ b/css/main.css
@@ -402,6 +402,11 @@ main {
     object-fit: cover;
 }
 
+.author {
+    height: 0;
+    overflow: hidden;
+}
+
 .author__image {
     background: var(--bg-color-2);
 }
@@ -441,6 +446,51 @@ main {
     border-bottom: 1px solid var(--color-1);
 }
 
+.stat {
+   text-align: center;
+   font-family: var(--font-family-2);
+   padding: 80px 0;
+}
+
+.stat__counter {
+    font-size: 60px;
+}
+
+.stat__label {
+    color: var(--color-2);
+    font-size: 25px;
+}
+
+.quote {
+    position: relative;
+    height: 200px;
+    background: red;
+}
+
+.quote img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.quote blockquote {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(0, 0, 0, 0.7);
+    font-family: var(--font-family-2);
+    font-size: 25px;
+}
+
 
 @media (min-width: 576px) {
     .hero__subtitle {
@@ -466,6 +516,11 @@ main {
     .portfolio__image {
         height: 350px;
     }
+
+    .stat {
+        padding: 40px 0;
+    }
+
 }
 
 @media (min-width: 768px) {
@@ -513,6 +568,14 @@ main {
     .portfolio__item:nth-child(3n) {
         justify-content: flex-end;
     }
+
+    .stat {
+        padding: 70px 0;
+    }   
+
+    .quote blockquote {
+        font-size: 40px;
+    }
 }
 
 @media (min-width: 992px) {
@@ -542,6 +605,14 @@ main {
 
     .portfolio__image {
         height: 450px;
+    }
+
+    .author {
+        height: initial;
+    }
+
+    .about.hero {
+        display: none;
     }
 }
 
